# rb-learn-opengl

./: .gitignore  .gitmodules  CMakeLists.txt
libs/glad/include/glad/: gl.h
src/: main.c  main.cpp
src/learn_opengl/: main.c  shader.h
src/two_shaders/: main.c
src/two_triangles/: main.c
